<resources>
    <string name="app_name">CinemaPhile</string>
   <string-array name="my_films">
       <item>Jcob</item>
       <item>Starbuck</item>
       <item>McDonald</item>
       <item>KFC</item>
   </string-array>
    <string name="search">Search</string>
    <string name="hint_search">Enter Keyword</string>

    <string name="error_message_failed_to_fetch">Error Message Failed To Fetch</string>
    <string name="action_settings">Share</string>
    <string name="empty_response">Empty Search</string>
    <string name="title">Avenger</string>
    <string name="imdb">0</string>
    <string name="poster">Avenger</string>
    <string name="logo">logo</string>
    <string name="loading">Loading...</string>
    <string name="load">load</string>
    <string name ="poster_description">Poster Of The Current Film</string>
    <string name="movie_name">Liem Tran</string>
    <string name="year">____</string>
    <string name="rated">__</string>
    <string name="runtime">__min</string>
    <string name="imdb_score">_._</string>
    <string name="rottentomatoes_score">_._</string>
    <string name="metacritic_score">_._</string>
    <string name="genres">Genres</string>
    <string name="plot_header">Plot</string>
    <string name="plot_content">Plot of the current film</string>
    <string name="genre">Genre(s)</string>
    <string name="directorcast"><![CDATA[Director & Cast]]></string>
    <string name="director">Director: </string>
    <string name="cast">Cast: </string>
    <string name="boxaward"><![CDATA[Box office & Awards]]></string>
    <string name="box_office">Box Office: </string>
    <string name="awards">Award(s): </string>
</resources>
